--- a/blurple-config.css
+++ b/blurple-config.css
@@ -6,8 +6,7 @@
     ------------------------------------------  */
 
     /* Source Import */
-@import url();
-
+@import url(https://raw.githack.com/leeprky/BlurpleRecolor/lode/source/blurple-source.css);
 
     /* Colors */
 .theme-dark, .theme-light {
