--- a/support/blurplerecolor.theme.css
+++ b/support/blurplerecolor.theme.css
@@ -13,7 +13,7 @@
     ------------------------------------------  */
 
     /* Source Import */
-@import url();
+@import url(https://raw.githack.com/leeprky/BlurpleRecolor/lode/source/blurple-source.css);
 
     /* Colors */
 .theme-dark, .theme-light {
